8134493: Cleaning inline caches of unloaded nmethods should be done in sweeper

Clean ICs of unloaded nmethods in sweeper to avoid impact on safepoint duration.

Reviewed-by: kvn, mdoerr